[project]
name = "chatapp-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.11",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
